discussion/kv_engine/139031/139031_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Use std::chrono::microseconds instead of useconds_t

Change-Id: I71c60509425df3218cb54fdad3ce0ba91df41ae4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-10-27 19:01:46.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-10-27 19:10:02.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31390/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31390/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5309/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/ep_test_apis.h:679:5: error: use of undeclared identifier "td" [clang-diagnostic-error]
    td::chrono::microseconds sleepTime{128};
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/defragmenter_test.cc:46:43: error: expected ")" [clang-diagnostic-error]
                                          max_sleep_time) {
                                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/defragmenter_test.cc:43:34: note: to match this "("
static bool wait_for_mapped_below(const cb::ArenaMallocClient& client,
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/defragmenter_test.cc:47:31: error: redefinition of "sleepTime" [clang-diagnostic-error]
    std::chrono::microseconds sleepTime{128};
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/defragmenter_test.cc:45:61: note: previous definition is here
                                  std::chrono::microseconds sleepTime
                                                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/defragmenter_test.cc:53:30: error: use of undeclared identifier "max_sleep_time" [clang-diagnostic-error]
        if (totalSleepTime > max_sleep_time) {
                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5309/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/ep_test_apis.h:679:5:
error: use of undeclared identifier "td" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5309/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27106/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/tests/ep_test_apis.h:679:5:
error: use of undeclared identifier "td"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27106/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6654/ : FAILURE

Compile error at [2020-10-27T19:05:34.817Z] ../kv_engine/engines/ep/tests/ep_test_apis.h:679:5:
error: ?td? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6654/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6773/ : FAILURE

Compile error at [2020-10-27T19:07:28.108Z] ../kv_engine/engines/ep/tests/ep_test_apis.h:679:5:
error: ?td? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6773/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5722/ : FAILURE

Compile error at [2020-10-27T19:05:35.248Z] ../kv_engine/engines/ep/tests/ep_test_apis.h:679:5:
error: use of undeclared identifier "td"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5722/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6943/ : FAILURE

Compile error at [2020-10-27T19:06:03.491Z] ../kv_engine/engines/ep/tests/ep_test_apis.h:679:5:
error: use of undeclared identifier "td"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6943/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14582/ : FAILURE

Compile error at [2020-10-27T19:07:58.680Z] ../kv_engine/engines/ep/tests/ep_test_apis.h:679:5:
error: use of undeclared identifier "td"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14582/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3838/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
